# geosketch

./: .flake8  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/skills/excalidraw-diagram-generator/scripts/: split-excalidraw-library.py
.github/: AGENTS.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: critical-thinking.agent.md  mvp-to-project-designer.agent.md  simple-app-idea-generator.agent.md  software-engineer-agent-v1.agent.md  specification.agent.md  ui-ux-designer.md
.github/instructions/: python-pep-conventions.instructions.md
.github/skills/acquire-codebase-knowledge/scripts/: scan.py
.github/skills/excalidraw-diagram-generator/scripts/: add-icon-to-diagram.py
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pylint.yml  release.yml
docs/: geo-sketch-design.md  implementation-design.md
geometry/: __main__.py
geometry/models/: __init__.py  ball.py  circle.py  common.py  cylinder.py  line.py  point.py  polygon.py  ray.py  slice_plane.py  solid.py  tangent.py  vector.py
geometry/services/: commands.py  dep_graph.py  geometry.py  validation.py
geometry/utils/: __init__.py  angles.py  constants.py  events.py  id_factory.py
scripts/: check.sh
spec/: MVP.md
spec/design/: _generate_drawio.py  geometry-app-ui-ux.drawio  geometry-app-ui-ux.md
tests/: test_commands.py  test_dep_graph.py  test_geometry.py  test_models.py  test_slice_plane.py  test_utils.py  test_validation.py
