[project]
name = "geosketch"
version = "0.1.0"
requires-python = ">=3.14"
license = "Apache-2.0"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.8",
    "shapely>=2.0",
    "scipy>=1.13",
]

[project.scripts]
geosketch = "geometry.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [".claude", ".github", "spec"]

[tool.pylint.main]
ignore-paths = ["spec", ".claude", ".github", ".venv"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.pylint.design]
max-args = 8
# Vector has 13 attributes total (5 inherited from GeoObject + 3 from
# DirectedObject + 5 own fields). 15 leaves a small margin for future models
# without bumping the default 7 too aggressively.
max-attributes = 15
# deps_for_type dispatches on 10 object types via match/case — 9 returns plus
# the ValueError arm in the wildcard case. 12 gives a small margin for future
# object types without requiring another bump.
max-returns = 12

[tool.pylint.format]
max-line-length = 100
# tests/test_geometry.py and tests/test_dep_graph.py are each single cohesive
# suites (known-input/known-output for the geometry service; one-test-per-path
# edge-table + invariant coverage for the dependency graph) that naturally run
# long; splitting either would only duplicate fixtures. 1600 leaves headroom
# above the default 1000.
max-module-lines = 1600

[tool.pytest.ini_options]
testpaths = ["tests"]
