[project]
name = "geosketch"
version = "0.1.0"
requires-python = ">=3.14"
license = "Apache-2.0"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.8",
    "shapely>=2.0",
    "scipy>=1.13",
]

[project.scripts]
geosketch = "geometry.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [".claude", ".github", "spec"]

[tool.pylint.main]
ignore-paths = ["spec", ".claude", ".github", ".venv"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.pylint.design]
max-args = 8
# Command constructors share a uniform ``(objects, graph, bus, ...)`` collaborator
# preamble (see geometry/services/commands.py) before their own positional args,
# so they exceed pylint's default positional-arg cap of 5. Match it to max-args:
# the uniform signature is a deliberate design choice (a future Project builds
# every command the same way), not an accident worth flagging per call site.
max-positional-arguments = 8
# Vector has 13 attributes total (5 inherited from GeoObject + 3 from
# DirectedObject + 5 own fields). 15 leaves a small margin for future models
# without bumping the default 7 too aggressively.
max-attributes = 15
# deps_for_type dispatches on 10 object types via match/case — 9 returns plus
# the ValueError arm in the wildcard case. 12 gives a small margin for future
# object types without requiring another bump.
max-returns = 12

[tool.pylint.format]
max-line-length = 100
# tests/test_geometry.py and tests/test_dep_graph.py are each single cohesive
# suites (known-input/known-output for the geometry service; one-test-per-path
# edge-table + invariant coverage for the dependency graph) that naturally run
# long; splitting either would only duplicate fixtures. geometry/services/
# geometry.py is likewise one cohesive module (every numeric geometry op lives
# there by design) carrying multi-paragraph NumPy docstrings on each public
# function; the 3D-solid additions (ball/cylinder/solid volume + cross-section,
# convex_hull_3d, the facet-shell/stack guards and their rationale comments)
# pushed it past 1700. The cross-section PR-review polish (CylinderCrossSection
# read-only accessors, the ellipse semi_major>=semi_minor invariant, and the
# through-axis ``approximate`` flag) plus matching tests then pushed both files
# past 1800. 1900 keeps headroom without inviting an arbitrary split that would
# only scatter tightly-related geometry across files. The 3D-solid PR-review test
# gaps (sin/cos-swap axis case, non-zero-altitude tangent, facet-shell surface-area
# rejection, off-center tetra centroid) then reached exactly 1900, so 2000. The
# PR #78 review-finding tests (non-finite distance_to_plane / plane_normal guards,
# the differing-vertex-count band parametrized across all three solid entry points,
# and a truncated-pyramid frustum exercising the slanted-quad multi-band builder)
# pushed test_geometry.py past 2000, so 2100.
max-module-lines = 2100

[tool.pytest.ini_options]
testpaths = ["tests"]
