[project]
name = "geosketch"
version = "0.1.0"
requires-python = ">=3.14"
license = "Apache-2.0"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.8",
    "shapely>=2.0",
    "scipy>=1.13",
]

[project.scripts]
geosketch = "geometry.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [".claude", ".github", "spec"]

[tool.pylint.main]
ignore-paths = ["spec", ".claude", ".github", ".venv"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.pylint.design]
max-args = 8
# Command constructors share a uniform ``(objects, graph, bus, ...)`` collaborator
# preamble (see geometry/services/commands.py) before their own positional args,
# so they exceed pylint's default positional-arg cap of 5. Match it to max-args:
# the uniform signature is a deliberate design choice (a future Project builds
# every command the same way), not an accident worth flagging per call site.
max-positional-arguments = 8
# Vector has 13 attributes total (5 inherited from GeoObject + 3 from
# DirectedObject + 5 own fields). 15 leaves a small margin for future models
# without bumping the default 7 too aggressively.
max-attributes = 15
# deps_for_type dispatches on 10 object types via match/case — 9 returns plus
# the ValueError arm in the wildcard case. 12 gives a small margin for future
# object types without requiring another bump.
max-returns = 12

[tool.pylint.format]
max-line-length = 100
# Raised above the 1000-line default because three modules are each a single
# cohesive unit that would only fragment if split: tests/test_geometry.py and
# tests/test_dep_graph.py (known-input/known-output and one-test-per-path edge
# tables — splitting duplicates fixtures), and geometry/services/geometry.py
# (every numeric 2-D and 3-D/solid geometry op lives here by design, each public
# function carrying a multi-paragraph NumPy docstring). The limit is set to
# accommodate that intentional cohesion rather than to invite an arbitrary split.
max-module-lines = 2300

[tool.pytest.ini_options]
testpaths = ["tests"]
